# crjdt-haskell

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  crjdt-haskell.cabal  stack-7.10.yaml  stack-8.0.2.yaml  stack.yaml
app/: Main.hs
examples/: Main.hs
src/: Lib.hs
src/Data/: Crjdt.hs
src/Data/Crjdt/: Context.hs  Core.hs  Eval.hs  Internal.hs  Types.hs
src/Data/Crjdt/Internal/: Core.hs
test/Data/: CrjdtSpec.hs  FigureSpec.hs
