name:                crjdt-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/crjdt-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Amar Potghan
maintainer:          amarpotghan@gmail.com
copyright:           2017 Amar Potghan
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Crjdt
                     , Data.Crjdt.Context
                     , Data.Crjdt.Types
                     , Data.Crjdt.Eval
                     , Data.Crjdt.Internal
                     , Data.Crjdt.Internal.Core
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , mtl
                     , free
  default-language:    Haskell2010

executable crjdt-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crjdt-haskell
  default-language:    Haskell2010

test-suite crjdt-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crjdt-haskell
                     , hspec
                     , containers
                     , mtl
                     , hedgehog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amarpotghan/crjdt-haskell
