name:          crjdt-haskell
version:       0.2.0.0
synopsis:      A Conflict-Free Replicated JSON Datatype for Haskell
description:   A Conflict-Free Replicated JSON Datatype for Haskell
homepage:      https://github.com/amarpotghan/crjdt-haskell#readme
license:       BSD3
license-file:  LICENSE
author:        Amar Potghan
maintainer:    amarpotghan@gmail.com
copyright:     2017 Amar Potghan
category:      Data
build-type:    Simple
cabal-version: >=1.10

extra-source-files:  README.md
                   , CHANGELOG.md 	

library
  hs-source-dirs:      src
  exposed-modules:     Data.Crjdt
                     , Data.Crjdt.Context
                     , Data.Crjdt.Types
                     , Data.Crjdt.Eval
                     , Data.Crjdt.Internal
                     , Data.Crjdt.Internal.Core
  build-depends:       base >= 4.7 && < 5
                     , text >= 0.11.1.0 && < 1.3
                     , containers >= 0.5.0.0  && < 0.6
                     , mtl >= 2.2.1 && < 2.3
                     , free >= 4.6.1 && < 5
  default-language:    Haskell2010

test-suite crjdt-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crjdt-haskell
                     , hspec
                     , containers >= 0.5.0.0  && < 0.6
                     , mtl
                     , hedgehog >= 0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules: Data.CrjdtSpec
               , Data.FigureSpec
  default-language:    Haskell2010

executable examples
  main-is: Main.hs
  hs-source-dirs: examples
  build-depends: base >= 4.7 && < 5
               , crjdt-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amarpotghan/crjdt-haskell
